# macro-lisp

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: factorial.rs  fizzbuzz.rs  hello.rs  wc.rs
src/: lib.rs  lib.rs.old
tests/: core.rs  file.rs  module.rs  tests.rs
